<?xml version="1.0"?>
<package format="3">
  <name>autoware_build</name>
  <version>0.1.0</version>
  <description>The autoware_build package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_api_launch</exec_depend>
  <exec_depend>control_launch</exec_depend>
  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>localization_launch</exec_depend>
  <exec_depend>map_launch</exec_depend>
  <!--exec_depend>perception_launch</exec_depend-->
  <exec_depend>ground_segmentation</exec_depend>
  <exec_depend>map_based_prediction</exec_depend>
  <exec_depend>multi_object_tracker</exec_depend>
  <exec_depend>object_merger</exec_depend>
  <exec_depend>object_range_splitter</exec_depend>
  <exec_depend>occupancy_grid_map_outlier_filter</exec_depend>
  <exec_depend>pointcloud_preprocessor</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>shape_estimation</exec_depend>
  <exec_depend>traffic_light_visualization</exec_depend>
  <exec_depend>planning_launch</exec_depend>
  <exec_depend>python3-bson</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensing_launch</exec_depend>
  <exec_depend>simulator_launch</exec_depend>
  <exec_depend>system_launch</exec_depend>
  <exec_depend>vehicle_launch</exec_depend>
  <exec_depend>web_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
