<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_launch</name>
  <version>0.1.0</version>
  <description>The autoware_launch package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>awapi_awiv_adapter</exec_depend>
  <exec_depend>control_launch</exec_depend>
  <exec_depend>dummy_perception_publisher</exec_depend>
  <exec_depend>map_launch</exec_depend>
  <exec_depend>localization_launch</exec_depend>
  <exec_depend>perception_launch</exec_depend>
  <exec_depend>planning_launch</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensing_launch</exec_depend>
  <exec_depend>system_launch</exec_depend>
  <exec_depend>vehicle_launch</exec_depend>

  <!--    TODO not sure where bson would be required-->
  <exec_depend>python3-bson</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
