<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>integration_launch</name>
  <version>0.1.0</version>
  <description>The integration_launch package</description>

  <maintainer email="hiroyuki.obinata@tier4.jp">Hiroyuki Obinata</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>autoware_launch</exec_depend>
  <exec_depend>planning_simulator_launcher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
