<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensing_launch</name>
  <version>0.1.0</version>
  <description>The sensing_launch package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>gnss_poser</exec_depend>
  <exec_depend>ublox_gps</exec_depend>

<!--  TODO(fred-apex-ai) these packages are not part of the repo, are they only available
internally?-->
  <exec_depend>livox_ros_driver</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
